[gd_scene load_steps=3 format=3 uid="uid://yv0pcm8y130r"]

[ext_resource type="Script" path="res://scripts/ui/tooltips/upgrade_tooltip.gd" id="1_11c6g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ajew5"]
bg_color = Color(0, 0, 0, 0.678431)

[node name="UpgradeTooltip" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_11c6g")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 137.0
offset_bottom = 65.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ajew5")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -68.5
offset_right = 68.5
offset_bottom = 65.0
grow_horizontal = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="UpgradeNameLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0980392, 0.764706, 0.811765, 1)
theme_override_font_sizes/font_size = 6
text = "<upgrade_name>"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 4
autowrap_mode = 2
